--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(LIB_SRC
     sylar/config.cc
 	sylar/thread.cc
     sylar/fiber.cc
+    sylar/scheduler.cc
     )
 
 add_library(sylar SHARED ${LIB_SRC})
@@ -49,6 +50,14 @@ add_executable(test_fiber tests/test_fiber.cc)
 add_dependencies(test_thread sylar)
 force_redefine_file_macro_for_sources(test_fiber) #__FILE__
 target_link_libraries(test_fiber ${LIBS})
+
+
+add_executable(test_scheduler tests/test_scheduler.cc)
+add_dependencies(test_thread sylar)
+force_redefine_file_macro_for_sources(test_scheduler) #__FILE__
+target_link_libraries(test_scheduler ${LIBS})
+
+
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
