【注释】epoll与协程结合添加注释

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ set(LIB_SRC
 	sylar/thread.cc
     sylar/fiber.cc
     sylar/scheduler.cc
+    sylar/iomanager.cc
+    sylar/timer.cc
     )
 
 add_library(sylar SHARED ${LIB_SRC})
